// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should match the snapshot 1`] = `
<DocumentFragment>
  <h1>
    Greetings, Programs
  </h1>
</DocumentFragment>
`;

exports[`<Heading /> with buttons: value should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col sm:flex-row"
  >
    <h1>
      Greetings, Programs
    </h1>
    <ul
      class="justify-end flex flex-col grow sm:flex-row btn-list"
    >
      <button
        class="btn btn-primary"
        type="button"
      >
        Go
      </button>
      <button
        class="btn btn-danger"
        type="button"
      >
        Stop
      </button>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<Heading /> with size: 2 should match the snapshot 1`] = `
<DocumentFragment>
  <h2>
    Greetings, Programs
  </h2>
</DocumentFragment>
`;

exports[`<Heading /> with size: 3 should match the snapshot 1`] = `
<DocumentFragment>
  <h3>
    Greetings, Programs
  </h3>
</DocumentFragment>
`;

exports[`<Heading /> with size: 4 should match the snapshot 1`] = `
<DocumentFragment>
  <h4>
    Greetings, Programs
  </h4>
</DocumentFragment>
`;

exports[`<Heading /> with size: 5 should match the snapshot 1`] = `
<DocumentFragment>
  <h5>
    Greetings, Programs
  </h5>
</DocumentFragment>
`;

exports[`<Heading /> with size: 6 should match the snapshot 1`] = `
<DocumentFragment>
  <h6>
    Greetings, Programs
  </h6>
</DocumentFragment>
`;
